--- a/Website/assets/css/main.css
+++ b/Website/assets/css/main.css
@@ -34,3 +34,19 @@ html, body{
     border-color: green;
     border-style: dashed;
 }
+    #banner .titlecontainer {
+        margin-top: -0.5em;
+        text-align: center;
+        width: 10em;
+        background-color: aliceblue;
+        font-size: 190%;
+        color: red
+    }
+    #banner .navcontainer{
+        margin-left: 50em;
+        margin-top: -4em;
+
+    }
+        #banner .navcontainer a{
+            margin-left: 1em;
+        }
