--- a/Website/assets/css/main.css
+++ b/Website/assets/css/main.css
@@ -77,11 +77,13 @@ html, body{
     /* border-color: green; */
     /* border-style: dashed; */
 }
+    /*Image Box*/
     #contentSect1 .imgContainer {
-    position: relative;
+    position: absolute;
     margin: 0;
+    margin-top: 7%;
     height: 300px;
-    width: 50%;
+    width: 41%;
     background-color: white;
     box-shadow:  3px 3px 3px 1px rgb(0, 0, 0);
     }
@@ -94,10 +96,35 @@ html, body{
             transform: translate(-50%, -50%);
             height: 90%;
             width: 90%;
-            /* border: 10px rgb(213, 240, 80) ;
+            /* border: 10px rgb(0, 0, 0) ;
             border-style: double; */
 
         }
+    /*Text Box*/
+    #txtContainer {
+        position: absolute;
+        padding: 10px; 
+        margin: 0;
+        margin-left: 45%;
+        margin-top: 2%;
+        height: 80%;
+        width: 50%;
+        background-color: white;
+        box-shadow:  3px 3px 3px 1px rgb(0, 0, 0);
+
+    }
+        #txtContainer h1 {
+            margin-top: 3%;
+            margin-bottom: 6%;
+            font-size: 200%;
+            text-align: center;
+        }
+        #txtContainer h2 {
+            margin-top: 0%;
+            text-align: center;
+            font-size: 140%;;
+        }
+
 
 /*THIS IS FOR MOBILE!!!*/
 /*My mobile Configueration*/
@@ -109,7 +136,7 @@ html, body{
     width: 100%;
     }
 
-/*Banner Section*/
+/* MOBILE Banner Section*/
 #banner {
     position: relative;
     background-color: peru;
@@ -147,5 +174,68 @@ html, body{
             color: white;
             text-decoration: none;
             font-size: x-large;
+            padding-right: 30px;
+        }
+    /* MOBILE Content Section 1*/
+    #contentSect1 {
+
+        position: relative;
+        background-color: grey;
+        height: 500px;
+        border-width: 100%;
+        padding: 20px;
+        margin: 0px;
+        border: 0px;
+        /* border-color: green; */
+        /* border-style: dashed; */
+    }
+        #contentSect1 .imgContainer {
+        position: relative;
+        margin: 0 auto;
+        margin-top: 90px;
+        margin-left: 50%;
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+        height: 180px;
+        width: 360px;
+        background-color: white;
+        box-shadow:  3px 3px 3px 1px rgb(0, 0, 0);
+        }
+            #contentSect1 .imgContainer  img{
+                margin: 0;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                -ms-transform: translate(-50%, -50%);
+                transform: translate(-50%, -50%);
+                height: 90%;
+                width: 90%;
+                /* border: 10px rgb(0, 0, 0) ;
+                border-style: double; */
+
+            }
+    /*MOBILE Text Box*/
+    #txtContainer {
+        position: relative;
+        bottom: 15%;
+        padding: 10px; 
+        margin: 0 auto;
+        margin-top: 2%;
+        height: 50%;
+        width: 80%;
+        background-color: white;
+        box-shadow:  3px 3px 3px 1px rgb(0, 0, 0);
+
+    }
+        #txtContainer h1 {
+            margin-top: 1%;
+            margin-bottom: 2%;
+            font-size: 200%;
+            text-align: center;
+        }
+        #txtContainer h2 {
+            margin-top: 0%;
+            text-align: center;
+            font-size: 140%;;
         }
 }
