ready for presentation

--- a/Website/assets/css/main.css
+++ b/Website/assets/css/main.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/cs ?family=Yanone+Kaffeesatz:400,300,200");
+/* @import url("https://fonts.googleapis.com/cs ?family=Yanone+Kaffeesatz:400,300,200"); */
 
 
 /*Web Defaults*/
@@ -194,6 +194,7 @@ html, body{
         #contentSect1 .imgContainer {
         position: relative;
         margin: 0 auto;
+        margin-bottom: 2%;
         top: 1%;
         height: 180px;
         width: 360px;
@@ -214,8 +215,9 @@ html, body{
 
             }
     /*MOBILE Text Box*/
-    #txtContainer {
+    #contentSect1 .txtContainer {
         position: relative;
+        left: 0%;
         margin: 0 auto;
         height: auto;
         width: 80%;
@@ -225,15 +227,16 @@ html, body{
         box-shadow:  3px 3px 3px 1px rgb(0, 0, 0);
 
     }
-        #txtContainer h1 {
+         #contentSect1 .txtContainer h1 {
             margin-top: 1%;
             margin-bottom: 2%;
             font-size: 200%;
             text-align: center;
         }
-        #txtContainer h2 {
+         #contentSect1 .txtContainer h2 {
             margin-top: 0%;
             text-align: center;
-            font-size: 140%;;
+            /* font-size: 140%;; */
+            font-size: 3.5vw;
         }
 }
